Use JDK 8 classes